# ChangeLog for app-office/lyx
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.312 2014/08/20 15:44:56 jer Exp $

  20 Aug 2014; Jeroen Roovers <jer@gentoo.org> lyx-2.0.8.1.ebuild:
  Stable for HPPA (bug #520258).

  02 Aug 2014; Raúl Porcel <armin76@gentoo.org> lyx-2.0.7.1-r2.ebuild:
  alpha/ia64/sparc stable wrt #505588

*lyx-2.1.1 (16 Jul 2014)
*lyx-2.0.8.1 (16 Jul 2014)

  16 Jul 2014; Yixun Lan <dlan@gentoo.org> +lyx-2.0.8.1.ebuild,
  +lyx-2.1.1.ebuild:
  version bump, proxy for @pavel sanda

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> lyx-2.0.7.1-r2.ebuild:
  x86 stable wrt bug #505588

*lyx-2.1.0 (18 Apr 2014)
*lyx-2.0.8 (18 Apr 2014)

  18 Apr 2014; Yixun Lan <dlan@gentoo.org> +lyx-2.0.8.ebuild,
  +lyx-2.1.0.ebuild, +files/2.0.8-python.patch, +files/2.1-python.patch:
  bump 2.0.8, 2.1.0, thanks @pavel sanda

  12 Apr 2014; Chema Alonso <nimiux@gentoo.org> lyx-2.0.7.1-r2.ebuild:
  Stable for amd64 wrt bug #505588

  28 Mar 2014; Jeroen Roovers <jer@gentoo.org> lyx-2.0.7.1-r2.ebuild:
  Stable for HPPA (bug #505588).

*lyx-2.0.7.1-r2 (17 Feb 2014)

  17 Feb 2014; Yixun Lan <dlan@gentoo.org> -lyx-2.0.5.1.ebuild,
  -lyx-2.0.5.1-r1.ebuild, -lyx-2.0.7.1-r1.ebuild, +lyx-2.0.7.1-r2.ebuild:
  drop 2.0.5 per maintainer request; fix deps, tex4ht[java] bug #486182,
  graphicsmagick[png] bug #314223; drop un-used USE=xetex,luatex

*lyx-2.0.7.1-r1 (16 Feb 2014)

  16 Feb 2014; Yixun Lan <dlan@gentoo.org> -lyx-2.0.7.1.ebuild,
  +lyx-2.0.7.1-r1.ebuild:
  bump to 2.0.7.1-r1, 1) EAPI=5, 2) drop qt4-r2, 3) convert to python*-r1 4)
  update mime database. thanks floppym, kensington

*lyx-2.0.7.1 (16 Feb 2014)

  16 Feb 2014; Yixun Lan <dlan@gentoo.org> +lyx-2.0.7.1.ebuild:
  version bump, thanks nihil39, bug #501422

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org> lyx-2.0.6.ebuild:
  Symlink texmf files into texmf-site, texmf will not be seen by texlive 2013
