@@ -16,16 +16,26 @@ DIST lyx-2.1.1.tar.xz 10638872 SHA256 ca5bf218bc86deadc9eca22030a96e911b0642b3fa
 EBUILD lyx-1.6.10.ebuild 4120 SHA256 445c2becd493409edac0a36d3d9d55a6e82cb2cd3a68fe426f19960cfe3ed94c SHA512 b644de0190a2c85dc139ed08bbd47da8428821eee2c4997741301b8a2380927d9eda01d998245b5598db4685c168d9083e45de0adf9f94a285b627035c84ce92 WHIRLPOOL 4c37840e9ba6d643c9271b0148f63f25d1aacf7fb3d5d76c4ca20aa9abb46f10cb6072306c51b213907732e864d5bcef6f74e91a96e344678bf0727b6755de90
 EBUILD lyx-2.0.6.ebuild 4453 SHA256 bfff68cf081d1e2a7b47f6074cd30fe8fbd5b3c9d15b87c139e74f1cf50a8c60 SHA512 75d5c6886265dd6463186ca2a1a407c0e5994ea38cb6b7734c34d686f6cf41c26b109e308eaa0d4a16c3256546a259c8ee38fecd332bf377dff33a5d12cc2892 WHIRLPOOL c75712601b5d15c8a5e7be86247790de9a22d01eab68ecde8ff0c4e2ba7d2fc7b91fa69895b40d954676afd76a37bcfe8b4fac3e3455c7f38801c3a967a8fb7f
 EBUILD lyx-2.0.7.1-r2.ebuild 4425 SHA256 445047b716fe3b2075f5f50c2269855501d8defb1033c72243d9f212ea6161f9 SHA512 0837f93db164f57d80c930d9c7411ee4418655f82317a070e0b305a4bf2218cdadab2b038a2cbc41665cb3046edc2d42b7cb052320b344bbbb1b1cc8ba86940e WHIRLPOOL dddbfcf311605f0cfd41ebb13eeaa4ae0f2fc36824ef98d7abff3630c5d4a16926bbc4a3e94e96afbc8f5f6b2ded164fd1c7c908ffd79ac5c8e5f2142918d8c5
-EBUILD lyx-2.0.8.1.ebuild 4487 SHA256 f0a98178a7036ba46503d28cefadaf656a35919ac443e461931bfd6577c727e2 SHA512 f30d95907c059c874b7232003a59a5e9cb59bd69809e3f2175fd51b3dac35ff4266a256e746501788f457b97bf763015c56ef73b3343db899cfe1b217cb31483 WHIRLPOOL 8dc0651f7bedb3808e07bd88ad457fd2be4667acc3a3fada5becb15bbdf7c539c697c4d9fa6fc31d3af05f7918bb354c08aa548329a312e10fae33d2b7e922c2
+EBUILD lyx-2.0.8.1.ebuild 4489 SHA256 c8cfae90250577af1b263c320db216fd7c28cf5c78c92bcbfc6f1ea515329dfe SHA512 a764f2ef39a281873f88af8b74518564f3c98765460cf60dce92b67171fb204b17cb23b89b4335429c4631019ed00a1eabcbb77ea62892a6b342736cd53ec5e2 WHIRLPOOL fcb49b93d192f2f99a9d092d6c3e510822aa39737cbf1cb1d7e6e1f6b41d1d61aab0733b124e4a84844961a0362aabc233b162186a0c3e54eea7de22d585ea3a
 EBUILD lyx-2.0.8.ebuild 4487 SHA256 a4ac6b4994118b599e82c82e7a07b730eff6c3b55288982f256dcebe3fc0468e SHA512 56217aaba37210887846d53ec3546ef38dedc1327ffa2d92b5992dfeba07e3f927eff14552259ed5e88efaf1c17b33ca4b28708268c132796b4fe37184d2ac8b WHIRLPOOL 8f41bf0520a03ca08feb262996d9ae225cb861d9abe34b801b49b779c2e615197819b1d47304b3979f5471dd3062b244f0aebe0780cd07c04de30baf0bb767a2
 EBUILD lyx-2.1.0.ebuild 4480 SHA256 5c188ef00875cece50d39657cc1973f86fb20e941adbafaac15dbbb6c7f01afe SHA512 609cd83faea063cd4918ff5585e086c79f179ecb645650f30b653234ab5869be26c35daf75bd2f2faf6a483b77ec9485a3018cb3579e9301854d24707632d7a4 WHIRLPOOL fca42705b074636bc55abba541e14fb92cd43c52ff7c59c59e99c2125f25fd2122715ccc9929d3f89fd33072cefe6510eabe1beb5e966aeab56f869193859c70
 EBUILD lyx-2.1.1.ebuild 4480 SHA256 616dcbfe05bcaee3914a0dbf88dcd9ebe8964a6b73934e668b548f976ad75b2a SHA512 539214607a15d590530ce90aaa138dc6c2118476f5961422ad9947516a6c9ce1b34ec20cea12be991fcc0add58baccbcb7e17aba14030f0cd4c017176492acc0 WHIRLPOOL f1f88c87ccfea59508ab4a3fed5bbab1742982dbe305226d89177c1d64bbee453c406707788cbc352072f2ab3ed3fa401370e37d00979d5d8b6dba862f0c44e3
-MISC ChangeLog 42029 SHA256 ce6cace3169ff72a7e42cf519d9b3fa11316476ed81530f78e7e5f97257fcf77 SHA512 d1736c3838ebf66d446b67af95a5cda68035082370e2ab659b4b559da0a9354d73b48d7eee12947a20b478f71f424a430c7adc791b663ac60d04fd428284fac3 WHIRLPOOL 70ad09e4a242fbc1ade12f3c8763e96ebffbdbb7622274d334e883192952ac5932f854a560246964cff55d1adcd4ef2fa1dd80ea7760650ef34aff6d6c1108b8
+MISC ChangeLog 42136 SHA256 82143bd65949b4dbce3bc0c98ac3a3b613e4de9da51255b870e4bda0784edadb SHA512 631fa5e47f5fd5f232750a288cfa7494c9744a81fae0855c88ab965179402eeae1cbb4032511ee1331e018c2b95260c209d18a71e4a57b63a206e9f9dfcdea5e WHIRLPOOL 2bf9b365a6edc6645bad4a0af2b82474e36eedb2ce82a3e90c93996d50569ffe36fabab807fd78d66a3a0d538a20d5d53ebafb68329346996d70d201caf85d00
 MISC metadata.xml 1593 SHA256 3e74c09403c8d71ae2b00d906fda9b9a1006ffe046f1a8f4f7e19fe84334cc65 SHA512 17fbf8f40fce9fceff58ce79abe827effd4e0822d4df584eeec9b0ee1989122bc0762f09d93a9f09334cc926e1b553f765325361cddddf2f071e0a848e280ab8 WHIRLPOOL db6ecebaa791225e7d918b90cc4998b4585d148426f9565b63fdff5472f5e472c7afbb2c7c7e82763d3501711741b9782a8878461c238f35f092cd3050cc98af
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlP0wnkACgkQVWmRsqeSphPneACfeK6JniGfqZ28qCPOMiwO+Z4h
-s5sAn3DiS6jfro7MRvzq4YaGa1h1pMNj
-=Vlab
+iQIcBAEBCAAGBQJUITbSAAoJEH/rgyzyU9sVdzEP/27o1dd8wY6Gzx5HpVE7r+w6
+8g9VH1Mq4XXG5VpY0hS46M72/YB6isF0Co4AOmMXttns0erS/JMooZqAQXgUb2Jb
+tDbXX0AyIHt4We8NewJIxsO1qfCKVBofMu7bPuL3HISTSpm2yfQKhFpwTYbqsk0S
+XmRiwXq4HRGAEOdomUBrsGQ6M1ULw4Xteyl/WbTOg/cLlEooldpb3VzaGN5nP0yt
+JgWaCb+0BXLGFp45UQPTurcDlfiGSV0dHdsLZpO95aiPPgVgrLXCrsPxUNry/Je4
+yI2gkh55gVu/UY1QhuyBiGf1Q1MnYYiKk7qChtePgbWgQFfyA2I5FmG6HoqtXB1N
+NFdNdQQx5ZoHUM+PuuAS/Cf4gWWlmNnxB/qdfh2+w3+7EZOA9gB96udRCO41XYs0
+7MHAtSgnqsaHomnN8qaqt9LgHw/jNBx3MCdB0p/Oe45yumN7+xKjJ+uG6slzmPB3
+mOCLEpAlTUURQ0M50WGomkIJbuF17bHB0orHSgfcn4ZQEZ2U9FUUyGT4/iDvLW/W
+2+2e5EL6eMVPilixA9gcZqHOHCvUMOu5yFaRIWi8oL8LthnViHghF6K/pHbwjDSQ
+D6GcOMKzDbC+qqHtaer90GakxE1eZc/b3aR1wUjX2Bc+3BBZ1MfOtddYegEKL8SV
+DEQkqh/n/uiY3ZNXDgeE
+=i/Zx
 -----END PGP SIGNATURE-----
