@@ -6,17 +6,19 @@ AUX quagga-services.init.3 1192 SHA256 406fc430bf848a7079372b379b1ed66738fda5dce
 AUX quagga.pam 975 SHA256 aa68ac97d7a951324bc3c4124a1c70f6fa88a45da860f636ac01cbcbfa36db70 SHA512 92dc6c68146d46046c6f5ff410629a2a7170e81e9657b7a2aebe1d94c8fa267acdcac9d8d8596fb54dbbacc0566502e82d900ea33f8824c07fba497b7e0f1efe WHIRLPOOL defc345fe4ccbff1cf3b68bee46f589467d68b11f7511d1333f9cdf4dbef8c55c32e4b0d9eb2f2aa57df7bdb47baa75bada593f97059494534192d34c808733b
 DIST ht-20040304-classless-bgp.patch 1581 SHA256 39993890f9e31d662ed0564c732fb22392a901beb45b64261ffeadd9edf27887 SHA512 3df102d8ab88aaee1f109a2310602d6f734f2268252e5e42df752df7db7abeac526e969289481c4abfe905dcd41c35dee65196c48ac320fe9d083305451476e8 WHIRLPOOL cef99d64d52ab8c28bd672fb93dfbd8d716a31c76a5403496a6d104a5ff39531d6085134124d41fe4ff7adf895fa001cbe77b6e42846d849d6c108c81583d04e
 DIST quagga-0.99.22.4.tar.xz 1609248 SHA256 5e12056692e2dbc272a929f96d0e98d9873f4e7f7ffcca62434b58f6660a6386 SHA512 bcf429e71073e4fc71efc364a21a6c8b70871a17c66bd1328bc57b57962c2c15182436183b2e363c9c1c0e85d84c49d304d4049d40129272f52d6140db330b8a WHIRLPOOL bfd2d5405b6ba44d52e8dcbdb74b31be02ad384d186abb37ec0dfba52facbc9c6c7a5309a11ad844e73129a2da970b91d293271b7194fdf98c93930a2def8cfd
+DIST quagga-0.99.23.1.tar.xz 1682104 SHA256 202e8b7fbec810f28a84e3fbb6aafdaf08a3b51527c258807abc8a74ed617eb8 SHA512 7a222d4a5aa41deeb233f2e9ce922e5c29787c2f74c1b99177089e3183b69d3c0e4db5846676485a1990b728e007e687070ba4cecab67aa61f8be6c0851581cc WHIRLPOOL 90e37fcb1b87ec1ea618d42c19a1350f84ffe87f2cd4e6e4629a9e7edef1ba792a8f287b3367b31eb6f2d387e6c287da47a69c5cacf0a76be8099c1f79878888
 EBUILD quagga-0.99.22.4.ebuild 3447 SHA256 d723c83fb2e94ea42b9b0617a5e510a6da8961974badd3e2aa25cf2f7b23f423 SHA512 12705aad3e6a019cb7a1199f06ccba37a95a1ecca5189d9846b8cfc206a415cd2598bbe2a6578c01b7d97da66e73ccdedcc2d816da86fff27540af2359cf4092 WHIRLPOOL 135da0a73e94bc699f195a599be77490149732e25351f73774e9fbd359e55d007b36cb37d6ec5cfa9050e0914e03b8c33c3d0845ac11498c84e456fdd2ebaee7
-MISC ChangeLog 26821 SHA256 2e065d830b9d966aaf286527295faea9503a60bdc262681c3f725f243c209934 SHA512 8490ced13e29afef41097f899b32dc848d713c4a418cefc2f8d826b6c4be65afbd083bc8d5accc9c0237923bcb9e746d3d95ac4a758ee627a61af214244a96dd WHIRLPOOL 49e373ec31b9af32b42a9b842f7143f73254f3f70741324361b60fed22bcabb861d0831588aedadb9c6a799be86fc33ed9a36c70dfa9e3d4b53b2174ff69816d
+EBUILD quagga-0.99.23.1.ebuild 3354 SHA256 a715093859a4667f0230de797d3a451eb212134af0a3aa3d51ca3afa639f0a90 SHA512 5100491270125b0a1e3cfa7b97e5bf162a0c47facef96d08c54363f48d24a95487d1d1367da5fd4a7b305478d3d1b8d6e4d3205a4d51a7b079421740bb31de25 WHIRLPOOL d0ce2588d2eedbd2983a64adde0f64047b30ff03fb96d079054b79386a3d5610a1f98312415013173cc93fb7cb5811ebe324ebb16f96e3daa88cebb6c84d48ee
+MISC ChangeLog 26946 SHA256 f07dcc9debad700cb8be51de11ace88178c58d8e5c69c28144593fa8da8ca370 SHA512 5d2e4bd2ccd33f563bf11422ba435f0a7f9927308100ad2cc5c2f9e0f1ee747536ec156cc67fdb18f307687b0471c4842a59d35189b6d404bd90de7c7364d6a6 WHIRLPOOL 1e00e4c7177d58eb6e155e2dd0651622e21c7ab0d8961075f2e083716d99fed228e25940a663ca06cb3fa7cf6c05c0b9a1854aab285b1fd2384df7d345b76e0b
 MISC metadata.xml 2125 SHA256 a8fa9b5faa1486306615e9088458960f5dc6463c88e672234f04ee5ac0874e68 SHA512 ba254525fd2dea2cbfc6f2b5a2d6e82c8c2d5ddecb5687c38faa14ea8ec53ebcd44a934b2f2350cfe0bf28a216d93773813a64388514a4079d92108796ea30a3 WHIRLPOOL 381fb94ef4954da55d87724b0590a7ee95129d6b365d95455a9909b8ff499c0de4f5856c9eb81f619308efd2edda9a3c88840ee5c5789bfd689618afe8280131
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJScgl0AAoJECo/aRed9267feQIAJ4PFOIBpBhncabIYaUsy4j9
-9Wy8KTgEPev0ky0BhYHlll4cFetYwmcOFj2mRb7eKVyFcyF4iMZ7dqQ6asgZyaff
-ReBq1FoS3LknyOrg+gOST6BplV6LojckDoJKFYgjDRXDmLoTNvEJLAP59+UBRbmM
-qayxebQCqTIkcE4PtzgZlLTIrLqquNCP205FuC1HWwHViLfYh/UG3hIJlvE0LRFh
-aLv4zOiL4OObAj9nbazzjj6PDYwzRECQJdX+PqO/QdrvKyvHAVR+1CqI+qpn/8bJ
-TxbMYW+6PXQeeoVTXck0ueIULELkc4SIc7l9nA6B9SHzMS0YNRFjOIO84YAHYws=
-=WXNY
+iQEcBAEBCAAGBQJUITFxAAoJECo/aRed9267BAAH/i5Q4rmuopveGWSnhM36lSfe
+sMlq4x2ja9dPqHJ+lAJ77yPqobKBFBGQcM1JEqeF9Mod/JOFFlMkp8GNbx+CiAlN
+X6DC4uA04qMaMpAdoIw6gu10taKFLvY+o1SrGhO2QEIRV1mIufaCCZCW2zOLSBYi
+K1EOtMaSJ/D4Giy8xcSKENCdd2Mat3K+8wKZY3S+31S1aYeZS97jlCNqgGIFE/Xe
+p7crvu635gD35zHFD2My9qkufpP/IuihFMCPMEbKFLvybWkWPO96LWW8TO/goQoF
+gOFytY+i7/XwFAxsxU9UmSyWNf4Td0sWXRazNkqfDtK3p7x5beV7sMeRPlUiy1Y=
+=jeA0
 -----END PGP SIGNATURE-----
