@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/quagga
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/quagga/ChangeLog,v 1.165 2013/10/31 07:41:25 pinkbyte Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/quagga/ChangeLog,v 1.166 2014/09/23 08:38:09 pinkbyte Exp $
+
+*quagga-0.99.23.1 (23 Sep 2014)
+
+  23 Sep 2014; Sergey Popov <pinkbyte@gentoo.org> +quagga-0.99.23.1.ebuild:
+  Version bump
 
   31 Oct 2013; Sergey Popov <pinkbyte@gentoo.org> quagga-0.99.22.4.ebuild,
   +files/quagga-0.99.22.4-ipctl-forwarding.patch:
